--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-native": "0.40.0",
     "react-native-google-places-autocomplete": "^1.2.6",
     "react-native-lock": "^0.4.0",
-    "react-native-maps": "0.13.0"
+    "react-native-maps": "0.13.0",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
