--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "axios": "^0.15.3",
     "react": "15.4.2",
     "react-native": "0.40.0",
+    "react-native-button": "^1.7.1",
+    "react-native-drawer": "^2.3.0",
     "react-native-google-places-autocomplete": "^1.2.6",
     "react-native-lock": "^0.4.0",
     "react-native-maps": "0.13.0",
+    "react-native-router-flux": "^3.37.0",
     "react-redux": "^5.0.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
