--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,6 +7,10 @@ target 'albums' do
 
   # Pods for albums
 
+  target 'albumsTests' do
+    inherit! :search_paths
+    # Pods for testing
+  end
 
 end
 
