--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-lock": "^0.4.0",
     "react-native-maps": "0.13.0",
     "react-native-router-flux": "^3.37.0",
+    "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
