--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "15.4.2",
     "react-native": "0.40.0",
     "react-native-button": "^1.7.1",
+    "react-native-checkbox": "^1.1.0",
     "react-native-drawer": "^2.3.0",
     "react-native-google-places-autocomplete": "^1.2.6",
     "react-native-lock": "^0.4.0",
