--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-button": "^1.7.1",
     "react-native-checkbox": "^1.1.0",
     "react-native-drawer": "^2.3.0",
+    "react-native-elements": "^0.9.7",
     "react-native-google-places-autocomplete": "^1.2.6",
     "react-native-lock": "^0.4.0",
     "react-native-maps": "0.13.0",
