--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.40.0",
     "react-native-button": "^1.7.1",
     "react-native-checkbox": "^1.1.0",
+    "react-native-communications": "^2.2.1",
     "react-native-drawer": "^2.3.0",
     "react-native-elements": "^0.9.7",
     "react-native-google-places-autocomplete": "^1.2.6",
